Update LinuxDo OAuth endpoints and config handling
Switched default LinuxDo OAuth endpoints from linux.do to connect.linux.do in environment, config, and documentation. Improved Docker Compose environment variable usage and added new fields to LinuxDo user info struct. Enhanced error handling in auth routes for better debugging.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,24 @@
+# ===========================================
+# Docker Compose 配置
+# ===========================================
+# PostgreSQL 配置
+POSTGRES_USER=relay
+POSTGRES_PASSWORD=relay
+POSTGRES_DB=linuxdo_relay
+
+# 应用端口
+APP_PORT=8080
+
+# ===========================================
+# 应用配置
+# ===========================================
 # HTTP 服务配置
 APP_HTTP_LISTEN=:8080
 
-# PostgreSQL 数据库配置（必填）
-APP_PG_DSN=postgres://user:password@localhost:5432/linuxdo_relay?sslmode=disable
+# PostgreSQL 数据库配置
+# Docker 环境使用: postgres://relay:relay@postgres:5432/linuxdo_relay
+# 本地开发使用: postgres://user:password@localhost:5432/linuxdo_relay
+APP_PG_DSN=postgres://relay:relay@localhost:5432/linuxdo_relay?sslmode=disable
 
 # Redis 配置
 APP_REDIS_ADDR=localhost:6379
@@ -16,12 +32,12 @@ APP_SIGNUP_CREDITS=100
 APP_DEFAULT_MODEL_CREDIT_COST=1
 
 # LinuxDo OAuth 配置（必填）
-# 在 https://linux.do/admin/api/keys 创建应用获取
+# 在 https://connect.linux.do/ 创建应用获取
 APP_LINUXDO_CLIENT_ID=your-client-id
 APP_LINUXDO_CLIENT_SECRET=your-client-secret
 APP_LINUXDO_REDIRECT_URL=http://localhost:8080/auth/linuxdo/callback
 
 # LinuxDo OAuth 端点（可选，使用默认值）
-# APP_LINUXDO_AUTH_URL=https://linux.do/oauth2/authorize
-# APP_LINUXDO_TOKEN_URL=https://linux.do/oauth2/token
-# APP_LINUXDO_USERINFO_URL=https://linux.do/api/user
+# APP_LINUXDO_AUTH_URL=https://connect.linux.do/oauth2/authorize
+# APP_LINUXDO_TOKEN_URL=https://connect.linux.do/oauth2/token
+# APP_LINUXDO_USERINFO_URL=https://connect.linux.do/api/user
