--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       retries: 5
 
   linuxdo-relay:
-    image: dbccccccc/linuxdo-relay:latest
+    image: ghcr.io/dbccccccc/linuxdo-relay:latest
     # 如果要本地构建，注释上面的 image 行，取消注释下面的 build 行
     # build:
     #   context: .
