Add setup wizard for runtime configuration and migrations
Introduces a setup wizard for initializing database and Redis configuration at runtime, including API endpoints and a frontend page for guided setup. Adds runtime config store, migration runner, and updates config loading to support runtime config. Docker Compose and documentation updated to reflect new setup flow. Existing server startup logic now supports setup mode and migration execution.

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 # Docker Compose 配置
 # ===========================================
 # PostgreSQL 配置
-POSTGRES_USER=relay
-POSTGRES_PASSWORD=relay
+POSTGRES_USER=linuxdo_relay
+POSTGRES_PASSWORD=linuxdo_relay
 POSTGRES_DB=linuxdo_relay
 
 # 应用端口
@@ -16,11 +16,12 @@ APP_PORT=8080
 APP_HTTP_LISTEN=:8080
 
 # PostgreSQL 数据库配置
-# Docker 环境使用: postgres://relay:relay@postgres:5432/linuxdo_relay
-# 本地开发使用: postgres://user:password@localhost:5432/linuxdo_relay
-APP_PG_DSN=postgres://relay:relay@localhost:5432/linuxdo_relay?sslmode=disable
+# - Docker Compose 默认通过 Setup 向导填写，不需要在此指定
+# - 如需直接运行二进制或跳过 Setup，可取消注释并填入本地/外部 DB 的 DSN
+# APP_PG_DSN=postgres://user:password@localhost:5432/linuxdo_relay?sslmode=disable
 
 # Redis 配置
+# 默认本地开发指向 localhost；Compose 会在运行时写入 runtime config
 APP_REDIS_ADDR=localhost:6379
 APP_REDIS_PASSWORD=
 
