--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,16 @@ services:
     image: postgres:14
     restart: unless-stopped
     environment:
-      POSTGRES_USER: relay
-      POSTGRES_PASSWORD: relay
-      POSTGRES_DB: linuxdo_relay
+      POSTGRES_USER: ${POSTGRES_USER:-linuxdo_relay}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-linuxdo_relay}
+      POSTGRES_DB: ${POSTGRES_DB:-linuxdo_relay}
     ports:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
       - ./migrations:/docker-entrypoint-initdb.d:ro
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U relay"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-linuxdo_relay} -d ${POSTGRES_DB:-linuxdo_relay}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -33,11 +33,11 @@ services:
       retries: 5
 
   linuxdo-relay:
-    image: ghcr.io/dbccccccc/linuxdo-relay:latest
-    # 如果要本地构建，注释上面的 image 行，取消注释下面的 build 行
-    # build:
-    #   context: .
-    #   dockerfile: Dockerfile
+    # image: ghcr.io/dbccccccc/linuxdo-relay:1.0.4
+    # 使用本地构建以包含最新修改
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: unless-stopped
     working_dir: /app
     ports:
@@ -46,8 +46,10 @@ services:
       - .env
     environment:
       # 数据库和 Redis 使用 Docker 内部网络地址
-      APP_PG_DSN: "postgres://${POSTGRES_USER:-relay}:${POSTGRES_PASSWORD:-relay}@postgres:5432/${POSTGRES_DB:-linuxdo_relay}?sslmode=disable"
       APP_REDIS_ADDR: "redis:6379"
+      APP_RUNTIME_CONFIG_PATH: "/app/runtimeconfig/config.json"
+    volumes:
+      - ./runtimeconfig:/app/runtimeconfig
     depends_on:
       postgres:
         condition: service_healthy
