Remove setup wizard and migration system
Eliminates the runtime setup wizard, custom migration runner, and related files. Switches database initialization to GORM auto-migration and requires all configuration via environment variables. Updates Docker and Compose files to remove runtime config and migration volume. Cleans up frontend to remove setup page and related logic.

--- a/.env.example
+++ b/.env.example
@@ -10,24 +10,25 @@ POSTGRES_DB=linuxdo_relay
 APP_PORT=8080
 
 # ===========================================
-# 应用配置
+# 应用配置（必填项）
 # ===========================================
 # HTTP 服务配置
 APP_HTTP_LISTEN=:8080
 
-# PostgreSQL 数据库配置
-# - Docker Compose 默认通过 Setup 向导填写，不需要在此指定
-# - 如需直接运行二进制或跳过 Setup，可取消注释并填入本地/外部 DB 的 DSN
-# APP_PG_DSN=postgres://user:password@localhost:5432/linuxdo_relay?sslmode=disable
+# PostgreSQL 数据库配置（必填）
+# Docker Compose 会自动设置此变量，本地开发需手动配置
+APP_PG_DSN=postgres://linuxdo_relay:linuxdo_relay@localhost:5432/linuxdo_relay?sslmode=disable
 
-# Redis 配置
-# 默认本地开发指向 localhost；Compose 会在运行时写入 runtime config
+# Redis 配置（必填）
 APP_REDIS_ADDR=localhost:6379
 APP_REDIS_PASSWORD=
 
 # JWT 密钥（必填，至少 32 字符）
 APP_JWT_SECRET=your-very-secure-secret-key-change-me-at-least-32-chars
 
+# ===========================================
+# 应用配置（可选项）
+# ===========================================
 # 积分系统配置
 APP_SIGNUP_CREDITS=100
 APP_DEFAULT_MODEL_CREDIT_COST=1
