--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,6 @@ services:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
-      - ./migrations:/docker-entrypoint-initdb.d:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-linuxdo_relay} -d ${POSTGRES_DB:-linuxdo_relay}"]
       interval: 10s
@@ -31,8 +30,7 @@ services:
       retries: 5
 
   linuxdo-relay:
-    # image: ghcr.io/dbccccccc/linuxdo-relay:1.0.4
-    # 使用本地构建以包含最新修改
+    # image: ghcr.io/dbccccccc/linuxdo-relay:latest
     build:
       context: .
       dockerfile: Dockerfile
@@ -43,11 +41,8 @@ services:
     env_file:
       - .env
     environment:
-      # 数据库和 Redis 使用 Docker 内部网络地址
+      APP_PG_DSN: "postgres://${POSTGRES_USER:-linuxdo_relay}:${POSTGRES_PASSWORD:-linuxdo_relay}@postgres:5432/${POSTGRES_DB:-linuxdo_relay}?sslmode=disable"
       APP_REDIS_ADDR: "redis:6379"
-      APP_RUNTIME_CONFIG_PATH: "/app/runtimeconfig/config.json"
-    volumes:
-      - runtimeconfig-data:/app/runtimeconfig
     depends_on:
       postgres:
         condition: service_healthy
@@ -63,5 +58,4 @@ services:
 volumes:
   postgres-data:
   redis-data:
-  runtimeconfig-data:
 
