Update Docker build workflow and version handling
Upgrade docker/build-push-action to v6 in build and release workflows. Add provenance and SBOM flags, and pass VERSION build argument from workflow to Dockerfile. Dockerfile now sets main.Version at build time and updates base image to alpine:3.19.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,10 +100,12 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: false
           tags: linuxdo-relay:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          provenance: false
+          sbom: false
